--- a/Questionhowmanymuch2.html
+++ b/Questionhowmanymuch2.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="ja">
+
 <head>
-<meta charset="utf-8"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&amp;display=swap" rel="stylesheet"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<style>
+    <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&amp;display=swap"
+        rel="stylesheet" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <style>
         body {
             background-color: #f4f4f4;
             font-family: "Noto Sans JP", sans-serif;
@@ -66,43 +68,50 @@
             margin-right: 15px;
         }
     </style>
-<title>Flash Card</title>
+    <title>Flash Card</title>
 </head>
+
 <body>
-<div class="first-screen" id="fourth-page" style="display: block;">
-<div style="display: flex; justify-content: space-between; align-items: center;">
-<p id="chapter60" style="color: #05a5a9; font-size: 36px; font-weight: 700; margin: 0px;margin-left: 10px;">第5章60</p>
-<img class="icon" onclick="goFirst()" src="img/menu.png"/>
-</div>
-<div id="japanese_content" onclick="goEnglishContent()" style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
-<div class="content-item">
-<div>
-<p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
-</div>
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
-<p id="main_content" style="color: black; font-size: 20px; font-weight: 600; margin: 0px; text-align: center;">
+    <div class="first-screen" id="fourth-page" style="display: block;">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <p id="chapter60" style="color: #05a5a9; font-size: 36px; font-weight: 700; margin: 0px;margin-left: 10px;">
+                第5章60</p>
+            <img class="icon" onclick="goFirst()" src="img/menu.png" />
+        </div>
+        <div id="japanese_content" onclick="goEnglishContent()"
+            style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
+            <div class="content-item">
+                <div>
+                    <p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
+                    <p id="main_content"
+                        style="color: black; font-size: 20px; font-weight: 600; margin: 0px; text-align: center;">
                         昨夜のパーティーには何人いたの？</p>
-</div>
-</div>
-</div>
-<div id="english_content" style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
-<div class="content-item" onclick="goJapaneseContent()">
-<div>
-<p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
+                </div>
+            </div>
+        </div>
+        <div id="english_content"
+            style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
+            <div class="content-item" onclick="goJapaneseContent()">
+                <div>
+                    <p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
                         1/10</p>
-</div>
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
-<p id="english_main_content" style="color: black; font-size: 20px; font-weight: 500; margin: 0px; text-align: center;">
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
+                    <p id="english_main_content"
+                        style="color: black; font-size: 20px; font-weight: 500; margin: 0px; text-align: center;">
                         How many people were at the party last night?</p>
-</div>
-</div>
-<div style="position: absolute; bottom: 0px;left: 10px; z-index: 2;">
-<audio controls="True" id="audioBtn" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
-</div>
-<div style="position: absolute; bottom: 0px;left: 10px;z-index: 1;">
-<audio controls="True" id="audioAnswer" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
-</div>
-</div>
+                </div>
+            </div>
+            <div style="position: absolute; bottom: 0px;left: 10px; z-index: 2;">
+                <audio controls="True" id="audioBtn" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
+            </div>
+            <div style="position: absolute; bottom: 0px;left: 10px;z-index: 1;">
+                <audio controls="True" id="audioAnswer" src="audio/answer.mp3"
+                    style="width: 250px; height: 30px;"></audio>
+            </div>
+        </div>
         <div id="available_content"
             style="justify-content: center; align-items: center; margin-top: 20px; display: none;">
             <p id="available_sentence"
@@ -110,48 +119,55 @@
                 ※特定のカフェの話をしていないのでa cafeとなる。</p>
         </div>
         <div id="success_content" style="display: none;">
-<div class="content-item" style="position: relative;">
-<img src="img/success.PNG" style="width: 200px; height: 120px;position: absolute; bottom: 80px;left: 50px;"/>
-<img src="img/flower_left.png" style="width: 70px; height: 70px;position: absolute; bottom: 0px;left: 10px;"/>
-<img src="img/flower_right.png" style="width: 70px; height: 70px;position: absolute; bottom: 0px;right: 10px;"/>
-</div>
-</div>
-<div id="button_group" style="position: relative; margin-top: 20px; display: none;">
-<img id="leftArrow" src="img/left-arrow.PNG" style="width: 50px; height: 30px; position: absolute; left: 0px; display: block;"/>
-<img id="rightArrow" src="img/right-arrow.PNG" style="width: 50px; height: 30px;position: absolute; right: 0px;"/>
-</div>
-<div id="button_side" style="position: relative; margin-top: 20px; display: none;">
-<button onclick="goLink()" style="position: absolute; left: 0px; display: block; margin: 0px;">問題を修了する</button>
-<img onclick="goNextPart()" src="img/right-arrow.PNG" style="width: 50px; height: 30px;position: absolute; right: 0px;"/>
-</div>
-</div>
+            <div class="content-item" style="position: relative;">
+                <img src="img/success.PNG"
+                    style="width: 200px; height: 120px;position: absolute; bottom: 80px;left: 50px;" />
+                <img src="img/flower_left.png"
+                    style="width: 70px; height: 70px;position: absolute; bottom: 0px;left: 10px;" />
+                <img src="img/flower_right.png"
+                    style="width: 70px; height: 70px;position: absolute; bottom: 0px;right: 10px;" />
+            </div>
+        </div>
+        <div id="button_group" style="position: relative; margin-top: 20px; display: none;">
+            <img id="leftArrow" src="img/left-arrow.PNG"
+                style="width: 50px; height: 30px; position: absolute; left: 0px; display: block;" />
+            <img id="rightArrow" src="img/right-arrow.PNG"
+                style="width: 50px; height: 30px;position: absolute; right: 0px;" />
+        </div>
+        <div id="button_side" style="position: relative; margin-top: 20px; display: none;">
+            <button onclick="goLink()"
+                style="position: absolute; left: 0px; display: block; margin: 0px;">問題を修了する</button>
+            <img onclick="goNextPart()" src="img/right-arrow.PNG"
+                style="width: 50px; height: 30px;position: absolute; right: 0px;" />
+        </div>
+    </div>
 </body>
 <script>
-const japaneseModelContent = {
-    "1/10": "昨夜のパーティーには何人いたの？",
-    "2/10": "図書館にはどれくらい人がいたの？",
-    "3/10": "先月、口座にいくら入ってたの？",
-    "4/10": "パーティーに何人の友達を招待したの？",
-    "5/10": "新しいノートパソコンにどれくらいお金を使ったの？",
-    "6/10": "夜ご飯のためにいくつ料理を作るの？",
-    "7/10": "YouTube見るのにどれくらい時間を使う予定？",
-    "8/10": "今年いくつの本を読んだの？",
-    "9/10": "これまでにいくつの国を訪れたの？",
-    "10/10": "新しい車のためにどれくらい貯金してるの？"
-};
+    const japaneseModelContent = {
+        "1/10": "昨夜のパーティーには何人いたの？",
+        "2/10": "図書館にはどのくらい人がいたの？",
+        "3/10": "先月、口座にいくら入ってたの？",
+        "4/10": "パーティーに何人の友達を招待したの？",
+        "5/10": "新しいノートパソコンにどれくらいお金を使ったの？",
+        "6/10": "夜ご飯にいくつ料理を作るの？",
+        "7/10": "YouTube見るのにどれくらい時間を使うつもりなの(未来)？",
+        "8/10": "今年いくつの本を読んだの？",
+        "9/10": "これまでにいくつ国を訪れたの？",
+        "10/10": "その新しい車のためにどれくらい貯金してるの？"
+    };
 
-const englishModelContent = {
-    "1/10": "How many people were at the party last night?",
-    "2/10": "How many people were in the library?",
-    "3/10": "How much money was in your account last month?",
-    "4/10": "How many friends did you invite to the party?",
-    "5/10": "How much did you spend on the new laptop?",
-    "6/10": "How many dishes are you gonna cook for dinner?",
-    "7/10": "How much time are you gonna spend on watching YouTube?",
-    "8/10": "How many books have you read this year?",
-    "9/10": "How many countries have you visited so far?",
-    "10/10": "How much money have you saved for the new car?"
-};
+    const englishModelContent = {
+        "1/10": "How many people were at the party last night?",
+        "2/10": "How many people were in the library?",
+        "3/10": "How much money was in your account last month?",
+        "4/10": "How many friends did you invite to the party?",
+        "5/10": "How much did you spend on the new laptop?",
+        "6/10": "How many dishes are you gonna cook for dinner?",
+        "7/10": "How much time are you gonna spend on watching YouTube?",
+        "8/10": "How many books have you read this year?",
+        "9/10": "How many countries have you visited so far?",
+        "10/10": "How much money have you saved for the new car?"
+    };
 
 
 
@@ -201,7 +217,19 @@ const englishModelContent = {
     function goEnglishContent() {
         englishContent.style.display = 'block';
         japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+        availableContent.style.display = 'none';
+        if (contentOrder.textContent == '1/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※How many people were there at the party last night?も可。"
+        }
+        if (contentOrder.textContent == '3/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※How much money did you have in your account last month?でも可。"
+        }
+        if (contentOrder.textContent == '7/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※makeでも可。"
+        }
         buttonGroup.style.display = 'block';
         englishContentOrder.textContent = contentOrder.textContent;
         englishMainContent.textContent = englishModelContent[contentOrder.textContent];
@@ -212,7 +240,7 @@ availableContent.style.display = 'none';
     function goJapaneseContent() {
         if (isClicked == 0) {
             englishContent.style.display = 'none';
-            japaneseContent.style.display = 'block';            
+            japaneseContent.style.display = 'block';
             availableContent.style.display = 'none';
 
             buttonGroup.style.display = 'none';
@@ -238,7 +266,7 @@ availableContent.style.display = 'none';
 
     }
 
-        function goNext() {
+    function goNext() {
         availableContent.style.display = 'none';
         clickCount++;
         let arrayOrder = 0;
@@ -250,8 +278,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(50%) rotate(30deg)'
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 successCount++;
                 englishContent.style.opacity = '1';
@@ -266,8 +294,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(50%) rotate(30deg)'
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 successCount++;
                 englishContent.style.opacity = '1';
@@ -279,7 +307,7 @@ availableContent.style.display = 'none';
                 setTimeout(() => {
                     englishContent.style.display = 'none';
                     japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+                    availableContent.style.display = 'none';
                     successContent.style.display = 'block';
                     buttonGroup.style.display = 'none';
                     buttonSide.style.display = 'block';
@@ -294,7 +322,7 @@ availableContent.style.display = 'none';
             setTimeout(() => {
                 englishContent.style.display = 'none';
                 japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+                availableContent.style.display = 'none';
                 buttonGroup.style.display = 'none';
                 successContent.style.display = 'block';
                 buttonSide.style.display = 'block';
@@ -330,8 +358,8 @@ availableContent.style.display = 'none';
                 englishContent.style.transform = 'translateX(-50%) rotate(-30deg)'
                 setTimeout(() => {
                     englishContent.style.display = 'none';
-                    japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                    japaneseContent.style.display = 'block';
+                    availableContent.style.display = 'none';
 
                     englishContent.style.opacity = '1';
                     englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -344,8 +372,8 @@ availableContent.style.display = 'none';
                 englishContent.style.transform = 'translateX(-50%) rotate(-30deg)'
                 setTimeout(() => {
                     englishContent.style.display = 'none';
-                    japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                    japaneseContent.style.display = 'block';
+                    availableContent.style.display = 'none';
 
                     englishContent.style.opacity = '1';
                     englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -360,8 +388,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(-50%) rotate(-30deg)';
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 englishContent.style.opacity = '1';
                 englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -450,4 +478,5 @@ availableContent.style.display = 'none';
     }
 
 </script>
+
 </html>
