--- a/Questionhowmanytimes.html
+++ b/Questionhowmanytimes.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="ja">
+
 <head>
-<meta charset="utf-8"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&amp;display=swap" rel="stylesheet"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<style>
+    <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&amp;display=swap"
+        rel="stylesheet" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <style>
         body {
             background-color: #f4f4f4;
             font-family: "Noto Sans JP", sans-serif;
@@ -66,43 +68,50 @@
             margin-right: 15px;
         }
     </style>
-<title>Flash Card</title>
+    <title>Flash Card</title>
 </head>
+
 <body>
-<div class="first-screen" id="fourth-page" style="display: block;">
-<div style="display: flex; justify-content: space-between; align-items: center;">
-<p id="chapter62" style="color: #05a5a9; font-size: 36px; font-weight: 700; margin: 0px;margin-left: 10px;">第5章62</p>
-<img class="icon" onclick="goFirst()" src="img/menu.png"/>
-</div>
-<div id="japanese_content" onclick="goEnglishContent()" style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
-<div class="content-item">
-<div>
-<p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
-</div>
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
-<p id="main_content" style="color: black; font-size: 20px; font-weight: 600; margin: 0px; text-align: center;">
+    <div class="first-screen" id="fourth-page" style="display: block;">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <p id="chapter62" style="color: #05a5a9; font-size: 36px; font-weight: 700; margin: 0px;margin-left: 10px;">
+                第5章62</p>
+            <img class="icon" onclick="goFirst()" src="img/menu.png" />
+        </div>
+        <div id="japanese_content" onclick="goEnglishContent()"
+            style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
+            <div class="content-item">
+                <div>
+                    <p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
+                    <p id="main_content"
+                        style="color: black; font-size: 20px; font-weight: 600; margin: 0px; text-align: center;">
                         週に何回運動しているの？</p>
-</div>
-</div>
-</div>
-<div id="english_content" style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
-<div class="content-item" onclick="goJapaneseContent()">
-<div>
-<p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
+                </div>
+            </div>
+        </div>
+        <div id="english_content"
+            style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
+            <div class="content-item" onclick="goJapaneseContent()">
+                <div>
+                    <p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
                         1/10</p>
-</div>
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
-<p id="english_main_content" style="color: black; font-size: 20px; font-weight: 500; margin: 0px; text-align: center;">
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
+                    <p id="english_main_content"
+                        style="color: black; font-size: 20px; font-weight: 500; margin: 0px; text-align: center;">
                         How many times in a week do you exercise?</p>
-</div>
-</div>
-<div style="position: absolute; bottom: 0px;left: 10px; z-index: 2;">
-<audio controls="True" id="audioBtn" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
-</div>
-<div style="position: absolute; bottom: 0px;left: 10px;z-index: 1;">
-<audio controls="True" id="audioAnswer" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
-</div>
-</div>
+                </div>
+            </div>
+            <div style="position: absolute; bottom: 0px;left: 10px; z-index: 2;">
+                <audio controls="True" id="audioBtn" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
+            </div>
+            <div style="position: absolute; bottom: 0px;left: 10px;z-index: 1;">
+                <audio controls="True" id="audioAnswer" src="audio/answer.mp3"
+                    style="width: 250px; height: 30px;"></audio>
+            </div>
+        </div>
         <div id="available_content"
             style="justify-content: center; align-items: center; margin-top: 20px; display: none;">
             <p id="available_sentence"
@@ -110,48 +119,55 @@
                 ※特定のカフェの話をしていないのでa cafeとなる。</p>
         </div>
         <div id="success_content" style="display: none;">
-<div class="content-item" style="position: relative;">
-<img src="img/success.PNG" style="width: 200px; height: 120px;position: absolute; bottom: 80px;left: 50px;"/>
-<img src="img/flower_left.png" style="width: 70px; height: 70px;position: absolute; bottom: 0px;left: 10px;"/>
-<img src="img/flower_right.png" style="width: 70px; height: 70px;position: absolute; bottom: 0px;right: 10px;"/>
-</div>
-</div>
-<div id="button_group" style="position: relative; margin-top: 20px; display: none;">
-<img id="leftArrow" src="img/left-arrow.PNG" style="width: 50px; height: 30px; position: absolute; left: 0px; display: block;"/>
-<img id="rightArrow" src="img/right-arrow.PNG" style="width: 50px; height: 30px;position: absolute; right: 0px;"/>
-</div>
-<div id="button_side" style="position: relative; margin-top: 20px; display: none;">
-<button onclick="goLink()" style="position: absolute; left: 0px; display: block; margin: 0px;">問題を修了する</button>
-<img onclick="goNextPart()" src="img/right-arrow.PNG" style="width: 50px; height: 30px;position: absolute; right: 0px;"/>
-</div>
-</div>
+            <div class="content-item" style="position: relative;">
+                <img src="img/success.PNG"
+                    style="width: 200px; height: 120px;position: absolute; bottom: 80px;left: 50px;" />
+                <img src="img/flower_left.png"
+                    style="width: 70px; height: 70px;position: absolute; bottom: 0px;left: 10px;" />
+                <img src="img/flower_right.png"
+                    style="width: 70px; height: 70px;position: absolute; bottom: 0px;right: 10px;" />
+            </div>
+        </div>
+        <div id="button_group" style="position: relative; margin-top: 20px; display: none;">
+            <img id="leftArrow" src="img/left-arrow.PNG"
+                style="width: 50px; height: 30px; position: absolute; left: 0px; display: block;" />
+            <img id="rightArrow" src="img/right-arrow.PNG"
+                style="width: 50px; height: 30px;position: absolute; right: 0px;" />
+        </div>
+        <div id="button_side" style="position: relative; margin-top: 20px; display: none;">
+            <button onclick="goLink()"
+                style="position: absolute; left: 0px; display: block; margin: 0px;">問題を修了する</button>
+            <img onclick="goNextPart()" src="img/right-arrow.PNG"
+                style="width: 50px; height: 30px;position: absolute; right: 0px;" />
+        </div>
+    </div>
 </body>
 <script>
-const japaneseModelContent = {
-    "1/10": "週に何回運動してるの？",
-    "2/10": "週に何回ピアノを練習してるの？",
-    "3/10": "月に何回友達と会うの？",
-    "4/10": "年に何回旅行に行くの？",
-    "5/10": "君は何回日本に行ったことがあるの？",
-    "6/10": "その映画を何回見たの？",
-    "7/10": "この話何回目よ！！",
-    "8/10": "それ言うの何回目？",
-    "9/10": "何度鍵を忘れたら済むの！",
-    "10/10": "何回試験に落ちたの？"
-};
+    const japaneseModelContent = {
+        "1/10": "週に何回運動してるの？",
+        "2/10": "週に何回ピアノを練習してるの？",
+        "3/10": "月に何回友達と会うの？",
+        "4/10": "年に何回旅行に行くの？",
+        "5/10": "何回日本に行ったことがあるの？",
+        "6/10": "その映画を何回見たの？",
+        "7/10": "その話するの、これで何回目だよ！(相手が)",
+        "8/10": "それ言うの何回目？",
+        "9/10": "何回鍵を忘れたら気が済むの！",
+        "10/10": "何回試験に落ちてるの？"
+    };
 
-const englishModelContent = {
-    "1/10": "How many times in a week do you exercise?",
-    "2/10": "How many times in a week do you practice the piano?",
-    "3/10": "How many times in a month do you meet your friends?",
-    "4/10": "How many times in a year do you go on a trip?",
-    "5/10": "How many times have you been to Japan?",
-    "6/10": "How many times have you seen that movie?",
-    "7/10": "How many times have you talked about it?",
-    "8/10": "How many times have you said that?",
-    "9/10": "How many times have you forgot your keys?",
-    "10/10": "How many times have you failed your exams?"
-};
+    const englishModelContent = {
+        "1/10": "How many times in a week do you exercise?",
+        "2/10": "How many times in a week do you practice the piano?",
+        "3/10": "How many times in a month do you meet your friends?",
+        "4/10": "How many times in a year do you go on a trip?",
+        "5/10": "How many times have you been to Japan?",
+        "6/10": "How many times have you seen that movie?",
+        "7/10": "How many times have you talked about it?",
+        "8/10": "How many times have you said that?",
+        "9/10": "How many times have you forgot your keys?",
+        "10/10": "How many times have you failed your exams?"
+    };
 
 
 
@@ -202,7 +218,27 @@ const englishModelContent = {
     function goEnglishContent() {
         englishContent.style.display = 'block';
         japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+        availableContent.style.display = 'none';
+        if (contentOrder.textContent == '3/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※友達は複数いる前提なのでfriendsと複数形にする。"
+        }
+        if (contentOrder.textContent == '4/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※travelでも可。"
+        }
+        if (contentOrder.textContent == '5/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※have you everとeverをつけても可。"
+        }
+        if (contentOrder.textContent == '7/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※talked about the story?でも可。"
+        }
+        if (contentOrder.textContent == '10/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※the examsやthe testsでも可。"
+        }
         buttonGroup.style.display = 'block';
         englishContentOrder.textContent = contentOrder.textContent;
         englishMainContent.textContent = englishModelContent[contentOrder.textContent];
@@ -213,7 +249,7 @@ availableContent.style.display = 'none';
     function goJapaneseContent() {
         if (isClicked == 0) {
             englishContent.style.display = 'none';
-            japaneseContent.style.display = 'block';            
+            japaneseContent.style.display = 'block';
             availableContent.style.display = 'none';
 
             buttonGroup.style.display = 'none';
@@ -239,7 +275,7 @@ availableContent.style.display = 'none';
 
     }
 
-        function goNext() {
+    function goNext() {
         availableContent.style.display = 'none';
         clickCount++;
         let arrayOrder = 0;
@@ -251,8 +287,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(50%) rotate(30deg)'
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 successCount++;
                 englishContent.style.opacity = '1';
@@ -267,8 +303,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(50%) rotate(30deg)'
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 successCount++;
                 englishContent.style.opacity = '1';
@@ -280,7 +316,7 @@ availableContent.style.display = 'none';
                 setTimeout(() => {
                     englishContent.style.display = 'none';
                     japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+                    availableContent.style.display = 'none';
                     successContent.style.display = 'block';
                     buttonGroup.style.display = 'none';
                     buttonSide.style.display = 'block';
@@ -295,7 +331,7 @@ availableContent.style.display = 'none';
             setTimeout(() => {
                 englishContent.style.display = 'none';
                 japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+                availableContent.style.display = 'none';
                 buttonGroup.style.display = 'none';
                 successContent.style.display = 'block';
                 buttonSide.style.display = 'block';
@@ -331,8 +367,8 @@ availableContent.style.display = 'none';
                 englishContent.style.transform = 'translateX(-50%) rotate(-30deg)'
                 setTimeout(() => {
                     englishContent.style.display = 'none';
-                    japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                    japaneseContent.style.display = 'block';
+                    availableContent.style.display = 'none';
 
                     englishContent.style.opacity = '1';
                     englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -345,8 +381,8 @@ availableContent.style.display = 'none';
                 englishContent.style.transform = 'translateX(-50%) rotate(-30deg)'
                 setTimeout(() => {
                     englishContent.style.display = 'none';
-                    japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                    japaneseContent.style.display = 'block';
+                    availableContent.style.display = 'none';
 
                     englishContent.style.opacity = '1';
                     englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -361,8 +397,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(-50%) rotate(-30deg)';
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 englishContent.style.opacity = '1';
                 englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -451,4 +487,5 @@ availableContent.style.display = 'none';
     }
 
 </script>
+
 </html>
